@@ -1,6 +1,7 @@
 NOTE: Add this to config.php   define('DB_SYSTEM', 'mysql');
 
-09082103 -> jonnyboy -> fixed bad patch 119, added triggers for and added index
+09092013 -> jonnyboy -> rewrote the trigger to add another check
+09082013 -> jonnyboy -> fixed bad patch 119, added triggers for and added index
 						changed pp additonal first query to passwordstatus BETWEEN -2 and -1, seems that -1 and -1 or = -1 takes a very long time
 						fixed bug in grabnzbs where failed to get article deleted collection from collections, added more output to grabnzbs, added unique index to nzbs
 						fixed python script echo properlly when run from php script, other minor tweaks	
